--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -37,6 +37,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
 
 
+
+# Holmes edits
+
+# From http://docs.vagrantup.com/v2/getting-started/provisioning.html
+ config.vm.provision :shell, path: "bootstrap.sh"	
+
+
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
   # config.vm.network "private_network", ip: "192.168.33.10"
